fixed alignment on footer anchor tags

--- a/src/style/Footer/Footer.scss
+++ b/src/style/Footer/Footer.scss
@@ -77,6 +77,7 @@ footer {
       a {
         text-decoration: none;
         color: skyblue;
+        display: flex;
         svg {
           width: 1em;
         }
